--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <!-- commented out seo below -->
   {% comment %} {%- seo -%} {% endcomment %}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
