--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,16 +3,17 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
+$base-font-size:   14px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.75 !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit:     20px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$text-color:       #000000 !default;
+$background-color: #f5f3f0 !default;
+$brand-color:      #5D6D7E !default;
+$brand-color-light:lighten($brand-color, 40%) !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -21,7 +22,7 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    650px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
