--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -106,13 +106,9 @@ a {
   color: $brand-color;
   text-decoration: none;
 
-  &:visited {
-    color: darken($brand-color, 15%);
-  }
-
   &:hover {
-    color: $text-color;
-    text-decoration: underline;
+    color: $brand-color;
+    background-color: $brand-color-light;
   }
 
   .social-media-list &:hover {
