--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,26 +2,38 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 1.865;
+  border-bottom: 1px solid $background-color;
+  min-height: $spacing-unit * 4;
+  padding-top: $spacing-unit * 3;
+
+  @include media-query($on-palm) {
+    padding-top: 0;
+  }
 
   // Positioning context for the mobile navigation icon
   position: relative;
 }
 
 .site-title {
-  @include relative-font-size(1.625);
-  font-weight: 300;
+  @include relative-font-size(2);
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 600;
   line-height: $base-line-height * $base-font-size * 2.25;
-  letter-spacing: -1px;
+  color: $brand-color;
   margin-bottom: 0;
   float: left;
 
   &,
-  &:visited {
-    color: $grey-color-dark;
+
+  &:hover {
+    color: $brand-color;
+    background-color: transparent;
   }
+
+  @include media-query($on-palm) {
+    @include relative-font-size(1.5);
+  }
+  
 }
 
 .site-nav {
@@ -51,7 +63,6 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
 
@@ -194,17 +205,18 @@
 
   > li {
     margin-bottom: $spacing-unit;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
 .post-meta {
-  font-size: $small-font-size;
   color: $grey-color;
 }
 
 .post-link {
   display: block;
-  @include relative-font-size(1.5);
+  color: $text-color;
 }
 
 
