--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,7 +3,7 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   14px !default;
+$base-font-size:   15px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.75 !default;
@@ -11,7 +11,7 @@ $base-line-height: 1.75 !default;
 $spacing-unit:     20px !default;
 
 $text-color:       #000000 !default;
-$background-color: #f5f3f0 !default;
+$background-color: #F3EBE0 !default;
 $brand-color:      #5D6D7E !default;
 $brand-color-light:lighten($brand-color, 40%) !default;
 
