few template changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
-              {{ site.author | escape }}
+              By {{ site.author | escape }}
             {%- else -%}
-              {{ site.title | escape }}
+              By {{ site.title | escape }}
             {%- endif -%}
             </li>
             {%- if site.email -%}
