--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,17 +13,19 @@ layout: default
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        {%- assign date_format = site.minima.date_format | default: "%d/%m/%y" -%}
         <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
         </a>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
+        <span class="post-date">{{ post.date | date: date_format }}</span>
       </li>
+      {%- if site.show_excerpts -%}
+      {{ post.excerpt }}
+      {%- endif -%}
+      <p class="read-more"><a href="{{ post.url | relative_url }}">Read more...</a></p>
       {%- endfor -%}
     </ul>
   {%- endif -%}
 
 </div>
+<script>console.log('script fired!');</script>
