more cosmetic changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: default
       {%- if site.show_excerpts -%}
       {{ post.excerpt }}
       {%- endif -%}
-      <p class="read-more"><a href="{{ post.url | relative_url }}">Read more...</a></p>
+      <p class="read-more"><a href="{{ post.url | relative_url }}#more">Read more...</a></p>
       {%- endfor -%}
     </ul>
   {%- endif -%}
