--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -94,7 +94,8 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
+  font-weight: $bold-font-weight;
+  margin-top: $spacing-unit * 2;
 }
 
 
