--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
   border-bottom: 1px solid $background-color;
-  min-height: $spacing-unit * 4;
+  min-height: $spacing-unit * 3;
   padding-top: $spacing-unit * 3;
 
   @include media-query($on-palm) {
@@ -17,7 +17,8 @@
 .site-title {
   @include relative-font-size(2);
   font-family: 'Times New Roman', Times, serif;
-  font-weight: 600;
+  font-weight: $bold-font-weight;
+  font-style: italic;
   line-height: $base-line-height * $base-font-size * 2.25;
   color: $brand-color;
   margin-bottom: 0;
@@ -201,7 +202,12 @@
 
 .post-list {
   margin-left: 0;
+  margin-top: $spacing-unit;
   list-style: none;
+
+  @include media-query($on-palm) {
+    margin-top: $spacing-unit/2;
+  }
 
   > li {
     margin-bottom: $spacing-unit;
@@ -212,7 +218,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      font-weight: 600;
+      font-weight: $bold-font-weight;
       border-bottom: 1px solid $grey-color;
     }
 
@@ -255,8 +261,13 @@
 }
 
 .post-title {
-  @include relative-font-size(2);
+  @include relative-font-size(1.5);
   line-height: 1;
+  margin-top: $spacing-unit;
+
+  @include media-query($on-palm) {
+    @include relative-font-size(1.4);
+  }
 
 }
 
@@ -264,26 +275,26 @@
   margin-bottom: $spacing-unit;
 
   h2 {
-    @include relative-font-size(2);
+    @include relative-font-size(1.35);
 
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.75);
+    @include media-query($on-palm) {
+      @include relative-font-size(1.3);
     }
   }
 
   h3 {
-    @include relative-font-size(1.625);
+    @include relative-font-size(1.2);
 
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.375);
+    @include media-query($on-palm) {
+      @include relative-font-size(1.2);
     }
   }
 
   h4 {
-    @include relative-font-size(1.25);
+    @include relative-font-size(1.15);
 
-    @include media-query($on-laptop) {
-      @include relative-font-size(1.125);
+    @include media-query($on-palm) {
+      @include relative-font-size(1.1);
     }
   }
 }
