--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -202,7 +202,6 @@
 
 .post-list {
   margin-left: 0;
-  margin-top: $spacing-unit;
   list-style: none;
 
   @include media-query($on-palm) {
@@ -211,6 +210,7 @@
 
   > li {
     margin-bottom: $spacing-unit;
+    margin-top: $spacing-unit * 2;
     display: flex;
     justify-content: space-between;
 
