--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -119,7 +119,24 @@
  */
 .site-footer {
   border-top: 1px solid $grey-color-light;
-  padding: $spacing-unit 0;
+  padding: $spacing-unit*2 0;
+  margin-top: $spacing-unit*2;
+  background-color: $brand-color;
+  color: $background-color;
+
+  a {
+    color: $background-color;
+    border-bottom: solid 1px $background-color;
+  }
+
+}
+
+.site-title-footer {
+  @include relative-font-size(1.45);
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: $bold-font-weight;
+  font-style: italic;
+  margin-bottom: 0;
 }
 
 .footer-heading {
@@ -127,15 +144,10 @@
   margin-bottom: $spacing-unit / 2;
 }
 
-.contact-list,
-.social-media-list {
-  list-style: none;
-  margin-left: 0;
-}
+
 
 .footer-col-wrapper {
   @include relative-font-size(0.9375);
-  color: $grey-color;
   margin-left: -$spacing-unit / 2;
   @extend %clearfix;
 }
@@ -147,18 +159,13 @@
 }
 
 .footer-col-1 {
-  width: -webkit-calc(30% - (#{$spacing-unit} / 2));
-  width:         calc(30% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+  width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-  width: -webkit-calc(25% - (#{$spacing-unit} / 2));
-  width:         calc(25% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-  width:         calc(45% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+  width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
@@ -189,6 +196,11 @@
  */
 .page-content {
   padding: $spacing-unit 0;
+
+  @include media-query($on-palm) {
+    padding-top: 0;
+  }
+
   flex: 1;
 }
 
@@ -225,6 +237,8 @@
     > .post-date {
       margin-left: 10px;
       font-weight: 300;
+      min-width: 80px;
+      text-align: right;
     }
   }
   .read-more {
