--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,19 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <data class="u-url" href="{{ '/' | relative_url }}"></data>
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              By {{ site.author | escape }}
-            {%- else -%}
-              By {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
-            <li class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></li>
-        </ul>
+        <p class="site-title-footer">version010</p>
+        <p class="p-name">
+          {%- if site.author -%}
+            By <a href="{{ '/about/' | relative_url }}"><b>{{ site.author | escape }}</b></a> from Sydney, Australia
+          {%- endif -%}
+        </p>
       </div>
-
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
+        <p class="rss-subscribe">Subscribe <a href="{{ '/feed.xml' | relative_url }}">via RSS</a> </p>
       </div>
     </div>
 
