header page updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <p class="site-title-footer">version010</p>
+        <a class="site-title-footer" href="{{ '/' | relative_url }}">version010</a>
         <p class="p-name">
           {%- if site.author -%}
             By <a href="{{ '/about/' | relative_url }}"><b>{{ site.author | escape }}</b></a> from Sydney, Australia
