--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>{{ page.title }}</title>
   <!-- commented out seo below -->
   {% comment %} {%- seo -%} {% endcomment %}
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
