added permalinks for posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ page.title }}</title>
+  <title>version010 | {% if page.title %} {{  page.title }} {% else %} Tony Park{% endif %}</title>
   <!-- commented out seo below -->
   {% comment %} {%- seo -%} {% endcomment %}
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
