brand color update

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -13,7 +13,7 @@ $spacing-unit:     20px !default;
 
 $text-color:       #000000 !default;
 $background-color: #F3EBE0 !default;
-$brand-color:      #5D6D7E !default;
+$brand-color:      #3e3e3e !default;
 $brand-color-light:lighten($brand-color, 40%) !default;
 
 $grey-color:       #828282 !default;
