--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -106,18 +106,11 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: $brand-color;
   text-decoration: none;
+  border-bottom: solid 1px $brand-color;
 
   &:hover {
     color: $brand-color;
     background-color: $brand-color-light;
-  }
-
-  .social-media-list &:hover {
-    text-decoration: none;
-
-    .username {
-      text-decoration: underline;
-    }
   }
 }
 
