--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,8 @@ $spacing-unit:     20px !default;
 $text-color:       #000000 !default;
 $background-color: #F3EBE0 !default;
 $brand-color:      #3e3e3e !default;
-$brand-color-light:lighten($brand-color, 40%) !default;
+$brand-color-light:lighten($brand-color, 25%) !default;
+$brand-color-lighter:lighten($brand-color, 35%) !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
